--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include collective *
-global-exclude *pyc
 include *.txt
+recursive-include collective/blueprint/jsonmigrator *
+global-exclude *pyc
 
