--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,8 @@
 include *.txt
-recursive-include collective/blueprint/jsonmigrator *
 global-exclude *pyc
-
+recursive-include collective *.zcml
+recursive-include docs *.py
+recursive-include docs *.rst
+recursive-include docs *.txt
+recursive-include docs Makefile
+recursive-include export_scripts *.py
