Update package structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,41 @@
-*.egg-info/
-*.pyc
+.coverage
+*.egg-info
+*.log
+*.mo
+*.py?
 *.swp
-/dist/
-/docs/_build/
-/.installed.cfg
-/bin/
-/develop-eggs/
-/eggs/
-/include/
-/lib/
+.*project
+.coverage.*
+# dirs
+.settings
+bin/
+buildout-cache/
+develop-eggs/
+eggs/
+htmlcov/
+include/
+lib/
+local/
+node_modules/
+parts/
+dist/*
+test.plone_addon/
+var/
+# files
+.installed.cfg
+.mr.developer.cfg
+lib64
+log.html
+output.xml
+pip-selfcheck.json
+report.html
+.vscode/
+.tox/
+reports/
+docs/Makefile
+docs/make.bat
+docs/doctrees
+docs/html
+/pyvenv.cfg
+local.cfg
+
