Use Plone 5.2 by default

--- a/base.cfg
+++ b/base.cfg
@@ -18,6 +18,16 @@ parts =
     plone-helper-scripts
 
 develop = .
+    src/collective.transmogrifier
+
+# mr.developer settings:
+always-checkout = force
+sources = sources
+auto-checkout = *
+
+
+[sources]
+collective.transmogrifier = git https://github.com/collective/collective.transmogrifier.git
 
 
 [instance]
