--- a/tox.ini
+++ b/tox.ini
@@ -89,9 +89,9 @@ deps =
 
 commands =
     mkdir -p {toxinidir}/reports/flake8
-    - flake8 --format=html --htmldir={toxinidir}/reports/flake8 --doctests src setup.py
-    flake8 --doctests src setup.py
-    isort --check-only --recursive {toxinidir}/src
+    - flake8 --format=html --htmldir={toxinidir}/reports/flake8 --doctests src/collective/blueprint setup.py
+    flake8 --doctests src/collective/blueprint setup.py
+    isort --check-only --recursive {toxinidir}/src/collective/blueprint
 
 whitelist_externals =
     mkdir
@@ -103,7 +103,7 @@ deps =
     isort<5
 
 commands =
-    isort --recursive --apply {toxinidir}/src
+    isort --recursive --apply {toxinidir}/src/collective/blueprint
 
 [testenv:py27-lint]
 basepython = python2.7
