Update pinn in Plone 5.1

--- a/test_plone51.cfg
+++ b/test_plone51.cfg
@@ -8,7 +8,21 @@ extends =
 update-versions-file = test_plone51.cfg
 
 [versions]
-plone.testing = 5.1.1
-plone.schema = 1.2.1
-collective.recipe.vscode = >=0.1.6
-PyJWT = <2.0.0a1
+
+# Added by buildout at 2021-07-12 17:09:44.984495
+bleach = 3.3.0
+collective.recipe.cmd = 0.11
+createcoverage = 1.5
+pathtools = 0.1.2
+pkginfo = 1.7.1
+pyparsing = 2.4.7
+readme-renderer = 29.0
+requests-toolbelt = 0.9.1
+
+# Required by:
+# bleach==3.3.0
+packaging = 21.0
+
+# Required by:
+# bleach==3.3.0
+webencodings = 0.5.1
