--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,14 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [2.7]
-        tox-environment: [py27-Plone43, py27-lint]
+        tox-environment: [py27-Plone43, py27-Plone51, py27-Plone52]
+        include:
+          - python-version: 3.7
+            tox-environment: py37-Plone52
+          - python-version: 3.8
+            tox-environment: py38-Plone52
+          - python-version: 3.8
+            tox-environment: py38-lint
 
     steps:
       # git checkout
